Updated readme and reformatted classes